--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev-client": "IS_DEV=true node client.js"
+    "dev-client": "IS_DEV=true node client.js",
+    "client": "node client.js"
   },
   "keywords": [],
   "author": "",
