--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "tic-tac-toe",
+  "name": "@shaunphil/tic-tac-toe",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "bin": "./client.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -16,6 +17,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "socket.io": "^4.5.1",
-    "socket.io-client": "^4.5.1"
+    "socket.io-client": "^4.5.1",
+    "uuid": "^8.3.2"
   }
 }
